<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0AF0B1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="23dp"
        android:fontFamily="cursive"
        android:text="@string/heading1"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/main_grid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/grid"
        tools:ignore="DuplicateIds" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="394dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="NotSibling">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingBottom="27dp">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="23sp"
                android:layout_weight="1"

                android:contentDescription="@string/o_1"
                android:onClick="playerTap"
                android:padding="5dp"
                android:tag="1"

                app:srcCompat="@drawable/blank"
                tools:ignore="NestedWeights,ImageContrastCheck" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/o_2"
                android:onClick="playerTap"
                android:padding="5dp"
                android:tag="2"
                app:srcCompat="@drawable/blank"
                tools:ignore="ImageContrastCheck,ImageContrastCheck" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="23sp"
                android:layout_weight="1"
                android:contentDescription="@string/o_3"
                android:onClick="playerTap"
                android:padding="5dp"
                android:tag="3"
                app:srcCompat="@drawable/blank"
                tools:ignore="NestedWeights,ImageContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingTop="17dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="5sp"
                android:layout_marginBottom="8sp"
                android:layout_weight="1"
                android:contentDescription="@string/o_4"
                android:onClick="playerTap"
                android:paddingStart="0dp"
                android:paddingTop="5dp"
                android:paddingEnd="15dp"
                android:paddingBottom="5dp"
                app:srcCompat="@drawable/blank"
                android:tag="4"

                tools:ignore="NestedWeights" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8sp"
                android:layout_weight="1"
                android:contentDescription="@string/o_5"
                android:onClick="playerTap"
                android:padding="5dp"
                android:tag="5"
                app:srcCompat="@drawable/blank"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8sp"
                android:layout_weight="1"
                android:contentDescription="@string/o_6"
                android:onClick="playerTap"
                android:paddingStart="19dp"
                android:paddingTop="5dp"
                app:srcCompat="@drawable/blank"
                android:paddingEnd="0dp"
                android:paddingBottom="5dp"
                android:tag="6"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="23sp"
                android:layout_weight="1"
                android:contentDescription="@string/o_7"
                android:onClick="playerTap"
                android:padding="5dp"
                android:tag="7"
                app:srcCompat="@drawable/blank"

                tools:ignore="NestedWeights,ImageContrastCheck,ImageContrastCheck" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/o_8"
                android:onClick="playerTap"
                android:padding="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:tag="8"
                app:srcCompat="@drawable/blank"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10sp"
                android:layout_weight="1"

                android:contentDescription="@string/o_9"
                android:onClick="playerTap"
                android:padding="5dp"
                android:tag="9"
                app:srcCompat="@drawable/blank" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="X's Turn - Tap to play"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.688" />

</androidx.constraintlayout.widget.ConstraintLayout>